<?xml version="1.0" encoding="UTF-8"?>
<!--
     Copyright (c) 2011, 2012 Eclipse contributors and others.
     All rights reserved. This program and the accompanying materials
     are made available under the terms of the Eclipse Public License v1.0
     which accompanies this distribution, and is available at
     http://www.eclipse.org/legal/epl-v10.html
    
     Contributors:
         Anna Dushistova(MontaVista) - copied from parent poms of Linux Tools and CDT projects
 -->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <prerequisites>
    <maven>3.0</maven>
  </prerequisites>
  <parent>
    <groupId>org.eclipse</groupId>
    <artifactId>eclipse-parent</artifactId>
    <version>3</version>
  </parent>
  <groupId>org.eclipse.tm</groupId>
  <artifactId>tm-parent</artifactId>
  <version>3.8.0-SNAPSHOT</version>
  <packaging>pom</packaging>
  <name> Target Management Parent</name>
  <licenses>
    <license>
      <name>Eclipse Public License v1.0</name>
      <comments>                                                                                                                                                                   
       All rights reserved.                                                                                                                                                        

       This program and the accompanying materials are made
       available under the terms of the Eclipse Public License v1.0
       which accompanies this distribution, and is available at    
       http://www.eclipse.org/legal/epl-v10.htm                    
      </comments>
    </license>
  </licenses>
  <properties>
    <tycho-version>0.14.1</tycho-version>
    <tycho-extras-version>0.14.0</tycho-extras-version>
    <platform-version-name>juno</platform-version-name>
    <eclipse-site>http://download.eclipse.org/releases/${platform-version-name}</eclipse-site>
    <orbit-site>http://download.eclipse.org/tools/orbit/downloads/drops/S20120123151124/repository</orbit-site>
    <rxtx-version>1.0.0.7837QcJa5vE7MnhE77YA7AU3SWUlbntVZAnlDoIGojcQd</rxtx-version>
    <rxtx-site>http://rxtx.qbang.org/eclipse</rxtx-site>
  </properties>
  <pluginRepositories>
    <pluginRepository>
      <id>maven.eclipse.org</id>
      <url>http://maven.eclipse.org/nexus/content/groups/public/</url>
    </pluginRepository>
  </pluginRepositories>
  <repositories>
    <repository>
      <id>orbit</id>
      <layout>p2</layout>
      <url>${orbit-site}</url>
    </repository>
    <repository>
      <id>rxtx-${rxtx-version}</id>
      <url>${rxtx-site}</url>
      <layout>p2</layout>
    </repository>
    <repository>
      <id>maven.eclipse.org</id>
      <url>http://maven.eclipse.org/nexus/content/groups/public/</url>
    </repository>
  </repositories>
  <profiles>
    <profile>
      <id>platform-indigo</id>
      <activation>
        <property>
          <name>platform-version-name</name>
          <value>indigo</value>
        </property>
      </activation>
      <properties>
        <eclipse-site>http://download.eclipse.org/releases/indigo</eclipse-site>
        <platform-version>[3.7,3.8)</platform-version>
        <sdk-version>3.7</sdk-version>
        <cdt-site>http://download.eclipse.org/tools/cdt/updates/indigo/</cdt-site>
      </properties>
      <repositories>
        <repository>
          <id>indigo</id>
          <layout>p2</layout>
          <url>${eclipse-site}</url>
        </repository>
        <repository>
          <id>orbit</id>
          <layout>p2</layout>
          <url>${orbit-site}</url>
        </repository>
        <repository>
          <id>rxtx</id>
          <layout>p2</layout>
          <url>${rxtx-site}</url>
        </repository>
        <repository>
          <id>cdt</id>
          <layout>p2</layout>
          <url>${cdt-site}</url>
        </repository>
      </repositories>
    </profile>
    <profile>
      <id>platform-juno</id>
      <activation>
        <activeByDefault>true</activeByDefault>
        <property>
          <name>platform-version-name</name>
          <value>juno</value>
        </property>
      </activation>
      <properties>
        <eclipse-site>http://download.eclipse.org/releases/staging</eclipse-site>
        <platform-version>[4.2,)</platform-version>
        <sdk-version>4.2</sdk-version>
        <cdt-site>http://download.eclipse.org/tools/cdt/builds/juno/milestones/M7</cdt-site>
        <cdt-test-site>http://download.eclipse.org/tools/cdt/updates/indigo/</cdt-test-site>
      </properties>
      <repositories>
        <repository>
          <id>juno</id>
          <layout>p2</layout>
          <url>${eclipse-site}</url>
        </repository>
        <repository>
          <id>cdt</id>
          <layout>p2</layout>
          <url>${cdt-site}</url>
        </repository>
        <repository>
          <id>cdttest</id>
          <layout>p2</layout>
          <url>${cdt-test-site}</url>
        </repository>
      </repositories>
    </profile>
  </profiles>
  <modules>
    <module>org.eclipse.tm.rse/doc/org.eclipse.dstore.doc.isv</module>
    <module>org.eclipse.tm.rse/doc/org.eclipse.rse.doc.isv</module>
    <module>org.eclipse.tm.rse/doc/org.eclipse.rse.doc.user</module>
    <module>org.eclipse.tm.rse/examples/org.eclipse.rse.examples-feature</module>
    <module>org.eclipse.tm.rse/examples/org.eclipse.rse.examples.daytime</module>
    <module>org.eclipse.tm.rse/examples/org.eclipse.rse.examples.dstore</module>
    <module>org.eclipse.tm.rse/examples/org.eclipse.rse.examples.tutorial</module>
    <module>org.eclipse.tm.rse/features/org.eclipse.rse-feature</module>
    <module>org.eclipse.tm.rse/features/org.eclipse.rse.core-feature</module>
    <module>org.eclipse.tm.rse/features/org.eclipse.rse.core-patch</module>
    <module>org.eclipse.tm.rse/features/org.eclipse.rse.core.source</module>
    <module>org.eclipse.tm.rse/features/org.eclipse.rse.dstore-feature</module>
    <module>org.eclipse.tm.rse/features/org.eclipse.rse.dstore.source</module>
    <module>org.eclipse.tm.rse/features/org.eclipse.rse.ftp-feature</module>
    <module>org.eclipse.tm.rse/features/org.eclipse.rse.ftp-patch</module>
    <module>org.eclipse.tm.rse/features/org.eclipse.rse.ftp.source</module>
    <module>org.eclipse.tm.rse/features/org.eclipse.rse.local-feature</module>
    <module>org.eclipse.tm.rse/features/org.eclipse.rse.local.source</module>
    <module>org.eclipse.tm.rse/features/org.eclipse.rse.scp-feature</module>
    <module>org.eclipse.tm.rse/features/org.eclipse.rse.sdk-feature</module>
    <module>org.eclipse.tm.rse/features/org.eclipse.rse.ssh-feature</module>
    <module>org.eclipse.tm.rse/features/org.eclipse.rse.ssh.source</module>
    <module>org.eclipse.tm.rse/features/org.eclipse.rse.telnet-feature</module>
    <module>org.eclipse.tm.rse/features/org.eclipse.rse.telnet.source</module>
    <module>org.eclipse.tm.rse/features/org.eclipse.rse.terminals-feature</module>
    <module>org.eclipse.tm.rse/features/org.eclipse.rse.terminals.source</module>
    <module>org.eclipse.tm.rse/features/org.eclipse.rse.useractions-feature</module>
    <module>org.eclipse.tm.rse/features/org.eclipse.rse.useractions.wrapper-feature</module>
    <!--<module>org.eclipse.tm.rse/features/org.eclipse.rse.wince.wrapper-feature</module>-->
    <module>org.eclipse.tm.rse/plugins/org.eclipse.dstore.core</module>
    <module>org.eclipse.tm.rse/plugins/org.eclipse.dstore.extra</module>
    <module>org.eclipse.tm.rse/plugins/org.eclipse.rse</module>
    <module>org.eclipse.tm.rse/plugins/org.eclipse.rse.connectorservice.dstore</module>
    <module>org.eclipse.tm.rse/plugins/org.eclipse.rse.connectorservice.local</module>
    <module>org.eclipse.tm.rse/plugins/org.eclipse.rse.connectorservice.ssh</module>
    <module>org.eclipse.tm.rse/plugins/org.eclipse.rse.connectorservice.telnet</module>
    <module>org.eclipse.tm.rse/plugins/org.eclipse.rse.core</module>
    <module>org.eclipse.tm.rse/plugins/org.eclipse.rse.dstore.security</module>
    <module>org.eclipse.tm.rse/plugins/org.eclipse.rse.efs</module>
    <module>org.eclipse.tm.rse/plugins/org.eclipse.rse.efs.ui</module>
    <module>org.eclipse.tm.rse/plugins/org.eclipse.rse.files.ui</module>
    <module>org.eclipse.tm.rse/plugins/org.eclipse.rse.importexport</module>
    <module>org.eclipse.tm.rse/plugins/org.eclipse.rse.processes.ui</module>
    <module>org.eclipse.tm.rse/plugins/org.eclipse.rse.sdk</module>
    <module>org.eclipse.tm.rse/plugins/org.eclipse.rse.services</module>
    <module>org.eclipse.tm.rse/plugins/org.eclipse.rse.services.dstore</module>
    <module>org.eclipse.tm.rse/plugins/org.eclipse.rse.services.files.ftp</module>
    <module>org.eclipse.tm.rse/plugins/org.eclipse.rse.services.local</module>
    <module>org.eclipse.tm.rse/plugins/org.eclipse.rse.services.ssh</module>
    <module>org.eclipse.tm.rse/plugins/org.eclipse.rse.services.telnet</module>
    <module>org.eclipse.tm.rse/plugins/org.eclipse.rse.shells.ui</module>
    <module>org.eclipse.tm.rse/plugins/org.eclipse.rse.subsystems.files.core</module>
    <module>org.eclipse.tm.rse/plugins/org.eclipse.rse.subsystems.files.dstore</module>
    <module>org.eclipse.tm.rse/plugins/org.eclipse.rse.subsystems.files.ftp</module>
    <module>org.eclipse.tm.rse/plugins/org.eclipse.rse.subsystems.files.local</module>
    <module>org.eclipse.tm.rse/plugins/org.eclipse.rse.subsystems.files.scp</module>
    <module>org.eclipse.tm.rse/plugins/org.eclipse.rse.subsystems.files.ssh</module>
    <module>org.eclipse.tm.rse/plugins/org.eclipse.rse.subsystems.processes.core</module>
    <module>org.eclipse.tm.rse/plugins/org.eclipse.rse.subsystems.processes.dstore</module>
    <module>org.eclipse.tm.rse/plugins/org.eclipse.rse.subsystems.processes.local</module>
    <module>org.eclipse.tm.rse/plugins/org.eclipse.rse.subsystems.processes.shell.linux</module>
    <module>org.eclipse.tm.rse/plugins/org.eclipse.rse.subsystems.shells.core</module>
    <module>org.eclipse.tm.rse/plugins/org.eclipse.rse.subsystems.shells.dstore</module>
    <module>org.eclipse.tm.rse/plugins/org.eclipse.rse.subsystems.shells.local</module>
    <module>org.eclipse.tm.rse/plugins/org.eclipse.rse.subsystems.shells.ssh</module>
    <module>org.eclipse.tm.rse/plugins/org.eclipse.rse.subsystems.shells.telnet</module>
    <module>org.eclipse.tm.rse/plugins/org.eclipse.rse.subsystems.terminals.core</module>
    <module>org.eclipse.tm.rse/plugins/org.eclipse.rse.subsystems.terminals.ssh</module>
    <module>org.eclipse.tm.rse/plugins/org.eclipse.rse.terminals.ui</module>
    <module>org.eclipse.tm.rse/plugins/org.eclipse.rse.ui</module>
    <module>org.eclipse.tm.rse/plugins/org.eclipse.rse.ui.capabilities</module>
    <module>org.eclipse.tm.rse/plugins/org.eclipse.rse.useractions</module>
    <module>org.eclipse.tm.rse/releng/org.eclipse.tm.repo</module>
    <!--<module>org.eclipse.tm.rse/releng/org.eclipse.rse.updatesite</module>-->
    <!--<module>releng/org.eclipse.tm.releng.master-feature</module>                                                                                                                   
    <module>releng/org.eclipse.tm.releng.test-feature</module>                                                                                                                     
-->
    <module>org.eclipse.tm.core/terminal/org.eclipse.tm.terminal</module>
    <module>org.eclipse.tm.core/terminal/org.eclipse.tm.terminal-feature</module>
    <module>org.eclipse.tm.core/terminal/org.eclipse.tm.terminal.local</module>
    <module>org.eclipse.tm.core/terminal/org.eclipse.tm.terminal.local-feature</module>
    <module>org.eclipse.tm.core/terminal/org.eclipse.tm.terminal.local.sdk-feature</module>
    <module>org.eclipse.tm.core/terminal/org.eclipse.tm.terminal.sdk-feature</module>
    <module>org.eclipse.tm.core/terminal/org.eclipse.tm.terminal.serial</module>
    <module>org.eclipse.tm.core/terminal/org.eclipse.tm.terminal.serial-feature</module>
    <module>org.eclipse.tm.core/terminal/org.eclipse.tm.terminal.ssh</module>
    <module>org.eclipse.tm.core/terminal/org.eclipse.tm.terminal.ssh-feature</module>
    <module>org.eclipse.tm.core/terminal/org.eclipse.tm.terminal.telnet</module>
    <module>org.eclipse.tm.core/terminal/org.eclipse.tm.terminal.telnet-feature</module>
    <module>org.eclipse.tm.core/terminal/org.eclipse.tm.terminal.test</module>
    <module>org.eclipse.tm.core/terminal/org.eclipse.tm.terminal.test-feature</module>
    <module>org.eclipse.tm.core/terminal/org.eclipse.tm.terminal.view</module>
    <module>org.eclipse.tm.core/terminal/org.eclipse.tm.terminal.view-feature</module>
    <module>org.eclipse.tm.rse/tests/org.eclipse.rse.tests</module>
    <module>org.eclipse.tm.rse/tests/org.eclipse.rse.tests-feature</module>
    <module>org.eclipse.tm.rse/tests/org.eclipse.rse.tests.framework</module>
    <module>org.eclipse.tm.rse/tests/org.eclipse.rse.tests.framework.examples</module>
  </modules>
  <build>
    <plugins>
      <plugin>
        <groupId>org.eclipse.tycho</groupId>
        <artifactId>tycho-maven-plugin</artifactId>
        <version>${tycho-version}</version>
        <extensions>true</extensions>
      </plugin>
      <plugin>
        <groupId>org.eclipse.tycho</groupId>
        <artifactId>target-platform-configuration</artifactId>
        <version>${tycho-version}</version>
        <configuration>
          <resolver>p2</resolver>
        </configuration>
      </plugin>
      <plugin>
        <artifactId>maven-assembly-plugin</artifactId>
        <configuration>
          <descriptors>
            <descriptor>src.xml</descriptor>
          </descriptors>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.eclipse.tycho</groupId>
        <artifactId>tycho-source-plugin</artifactId>
        <version>${tycho-version}</version>
        <configuration>
          <encoding>UTF-8</encoding>
          <strictSrcIncludes>false</strictSrcIncludes>
        </configuration>
        <executions>
          <execution>
            <id>attach-source</id>
            <goals>
              <goal>plugin-source</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.eclipse.tycho</groupId>
        <artifactId>tycho-packaging-plugin</artifactId>
        <configuration>
          <strictBinIncludes>false</strictBinIncludes>
          <archiveSite>true</archiveSite>
        </configuration>
      </plugin>
      <plugin>
        <artifactId>maven-antrun-plugin</artifactId>
        <inherited>false</inherited>
        <executions>
          <execution>
            <id>prepare-serverruntime</id>
            <phase>prepare-package</phase>
            <goals>
              <goal>run</goal>
            </goals>
            <configuration>
              <target>
                <property name="buildDirectory" value="${project.build.directory}/../"/>
                <property name="builder" value="${project.build.directory}/../org.eclipse.tm.rse/releng/org.eclipse.rse.build/"/>
                <property name="buildId" value="3.4.0"/>
                <ant antfile="${project.build.directory}/../dstoreTargets.xml">
                  <target name="serverruntime"/>
                </ant>
              </target>
            </configuration>
          </execution>
        </executions>
      </plugin>
    </plugins>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.eclipse.tycho</groupId>
          <artifactId>tycho-compiler-plugin</artifactId>
          <version>${tycho-version}</version>
          <configuration>
            <encoding>UTF-8</encoding>
            <source>1.5</source>
            <target>1.5</target>
          </configuration>
        </plugin>
        <!-- enable source bundle generation -->
        <plugin>
          <groupId>org.eclipse.tycho</groupId>
          <artifactId>tycho-source-plugin</artifactId>
          <version>${tycho-version}</version>
          <executions>
            <execution>
              <id>plugin-source</id>
              <goals>
                <goal>plugin-source</goal>
              </goals>
            </execution>
          </executions>
        </plugin>
        <plugin>
          <groupId>org.eclipse.tycho</groupId>
          <artifactId>tycho-surefire-plugin</artifactId>
          <version>${tycho-version}</version>
          <configuration>
            <useUIHarness>true</useUIHarness>
            <useUIThread>true</useUIThread>
            <failIfNoTests>false</failIfNoTests>
            <dependencies>
              <dependency>
                <type>p2-installable-unit</type>
                <artifactId>org.eclipse.sdk.feature.group</artifactId>
                <version>${sdk-version}</version>
              </dependency>
            </dependencies>
            <product>org.eclipse.sdk.ide</product>
            <argLine>-Xms512m -Xmx1024m -XX:PermSize=256m -XX:MaxPermSize=256m</argLine>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.eclipse.tycho</groupId>
          <artifactId>tycho-versions-plugin</artifactId>
          <version>${tycho-version}</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-resources-plugin</artifactId>
          <version>2.5</version>
          <configuration>
            <encoding>ISO-8859-1</encoding>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-antrun-plugin</artifactId>
          <version>1.6</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-assembly-plugin</artifactId>
          <version>2.2.1</version>
          <configuration>
            <tarLongFileMode>gnu</tarLongFileMode>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-site-plugin</artifactId>
          <version>3.0</version>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>
</project>
